Fix mobile view issues: search box text wrap, assignment title truncation, ordering question word-break

--- a/src/addons/block/timeline/components/events/events.scss
+++ b/src/addons/block/timeline/components/events/events.scss
@@ -51,7 +51,7 @@ h4 {
         flex-wrap: wrap;
 
         & > span {
-            @include ellipsis();
+            @include ellipsis(2);
         }
 
     }
