--- a/src/addons/qtype/ordering/component/ordering.scss
+++ b/src/addons/qtype/ordering/component/ordering.scss
@@ -31,7 +31,7 @@
     }
 
     ion-reorder-group ion-card {
-        contain: layout paint; // This is needed to make list-style to work properly (otherwise all items were 1/a/i).
+        contain: layout paint;
 
         &:first-of-type [data-action="move-backward"],
         &:last-of-type [data-action="move-forward"] {
@@ -78,4 +78,25 @@
             }
         }
     }
+
+    @include media-breakpoint-down(md) {
+    ion-reorder-group .item {
+        ion-reorder {
+            --min-width: 32px;
+            margin-right: 4px;
+        }
+
+        div[slot="end"] ion-button {
+            --padding-start: 4px;
+            --padding-end: 4px;
+        }
+
+        ion-label {
+            flex: 1 1 auto;
+            min-width: 0;
+            overflow-wrap: break-word;
+            word-break: normal;
+        }
+    }
+}
 }
