--- a/src/core/features/search/components/search-box/search-box.scss
+++ b/src/core/features/search/components/search-box/search-box.scss
@@ -35,20 +35,49 @@
             --padding-end: 0px;
             font-size: var(--mdl-typography-body-fontSize-sm);
         }
-    }
 
-    @include media-breakpoint-down(md) {
-        ion-input {
-            font-size: 13px;
-            --padding-end: 8px;
+        @include media-breakpoint-down(md) {
+            ion-input {
+                --padding-start: 4px !important;
+                --padding-end: 2px !important;
+                font-size: 10px !important;
+            }
 
-            &::part(native) {
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
+            ion-button.button {
+                --a11y-sizing-minTargetSize: 26px !important;
+                --padding-start: 0px !important;
+                --padding-end: 0px !important;
+
+                ion-icon {
+                    font-size: 14px !important;
+                }
             }
         }
     }
+
+    .custom-placeholder-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 5;
+    display: flex;
+    align-items: center;
+    pointer-events: none;
+    padding: 4px 90px 4px 16px;
+
+    .custom-placeholder-text {
+        white-space: normal;
+        line-height: 1.2;
+        font-size: 13px;
+        color: var(--ion-color-medium, #6a737b);
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+}
 
     .core-search-history {
         max-height: calc(-120px + 80vh);
@@ -72,7 +101,6 @@
             }
 
             * {
-                // Click target will be the whole item.
                 pointer-events: none;
             }
         }
