--- a/src/theme/globals.variables.scss
+++ b/src/theme/globals.variables.scss
@@ -75,7 +75,7 @@ $colors:  (
 $screen-breakpoints: (
     xs: 0px,
     sm: 576px,
-    md: 768px,
+    md: 1300x,
     lg: 992px,
     tablet: 992px,
     xl: 1200px
